fix alignement btn library

--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -12,7 +12,7 @@
 }
 
 .Button + .Button {
-    margin-right: 1.5em;
+    margin-left: 1.5em;
 }
 
 .Button:hover {
